--- a/src/components/window.astro
+++ b/src/components/window.astro
@@ -36,7 +36,7 @@ const about = "hi! i'm a code developer from egypt who learns html, css and some
     </div>
 </div>
 
-<script is:inline src="src/js/window.js"></script>
+<script src="../js/window.js"></script>
 
 <style>
     .window {
