--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<slot />
-		<script is:inline src="src/js/oneko.js"></script>
+		<script src="../js/oneko.js"></script>
 	</body>
 </html>
 
