make some more fixes :|

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@
 	}
 
 	:root {
-		--bg: url(src/assets/clouds.jpg);
+		--bg: url(/images/clouds.jpg);
 		--window-bg: #c6c6c6;
 		--window-titlebar-bg: linear-gradient(90deg, navy, #1084d0);
 		--text: black;
