--- a/src/components/window.astro
+++ b/src/components/window.astro
@@ -1,4 +1,5 @@
 ---
+import cat from '../assets/cat.jpg';
 const name = "omardotdev";
 const about = "hi! i'm a code developer from egypt who learns html, css and some javascript, i'm also really interested into programming too lol.";
 ---
@@ -13,7 +14,7 @@ const about = "hi! i'm a code developer from egypt who learns html, css and some
     </div>
     <div class="window-body">
         <div class="window-body-main">
-            <img id="avatar" height="80" width="80" src="https://avatars.githubusercontent.com/u/180954465?v=4" />
+            <img id="avatar" height="80" width="80" src={cat.src} />
             <div>
                 <h3>{name}</h3>
                 <span>{about}</span>
