--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Main from '../components/home.astro';
+import Main from '../components/contact.astro';
 ---
 
 <Layout>
