make some slight adjustments

--- a/src/components/head.astro
+++ b/src/components/head.astro
@@ -8,4 +8,5 @@
 <meta name="twitter:title" content="Omar's website" />
 <meta name="twitter:description" content="my very epic website!" />
 <meta name="generator" content={Astro.generator} />
+<meta name="darkreader-lock">
 <title>Omar</title>
