--- a/src/components/home.astro
+++ b/src/components/home.astro
@@ -8,7 +8,7 @@ import Navbar from "../components/navbar.astro";
 <main>
     <h1>hi! i'm <span class="graident">Omar<span></h1>
     <p>i'm a web developer from egypt who learns html, css and some javascript, i'm also really interested into programming too lol</p>
-    <p>here is a random picture of <a href="https://vennie.moe">vennie</a> i guess..</p>
+    <p>here is a random picture of <a href="https://vennie.moe">vennie</a>!</p>
     <Image src={Vennie} alt="Vennie from vennie.moe" width="300" height="500" />
 </main>
 
