--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,7 @@ import Head from '../components/head.astro'
 	<body>
 		<slot />
 	</body>
+	<script src="../js/oneko.js" />
 </html>
 
 <style>
@@ -24,5 +25,6 @@ import Head from '../components/head.astro'
     	color: #eceff4;
     	max-width: 750px;
     	margin: 0 auto;
+		padding: 0 20px;
 	}
 </style>
